[package]
name = "pandoc-wasm-wrapper"
version = "0.2.0"
description = "Pandoc.wasm wrapper for easy deployment and a familiar interface"
authors = ["James Cuénod"]
edition = "2021"
repository = "https://github.com/jcuenod/pandoc-wasm-wrapper"
build = "build.rs"
license = "GPL-3.0-only"

[dependencies]
once_cell = "1.20.2"
tokio = "1.42.0"
wasmer = "5.0.2"
wasmer-wasix = "0.32.0"

[build-dependencies]
reqwest = { version = "0.12.9", features = ["blocking"] }
